# pro.guap-report-validator

./: Dockerfile  README.md  индивидуальное_задание_отчет.docx
.github/workflows/: tests.yml  tests_backend.yml  tests_docx.yml  tests_odt.yml
report-validator/: suai-lk-auth.py
report-validator/ParserReportPdf/: ParserReportPdf.py  test.py
report-validator/backend/: README.md  setup.py
report-validator/backend/api/: handlers.py  main.py  schemas.py  utils.py
report-validator/backend/tests/: test_validation_endpoint.py  test_validation_multipart_endpoint.py
report-validator/backend/tests/test_files/: test_doc.doc  test_docx.docx  test_odt.odt
report-validator/validator-odt/: pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
report-validator/validator-odt/src/validateODTreport/: check_odt.py
report-validator/validator-odt/tests/: check_odt_test.py  input_data_test.py
report-validator/validator_docx/: check_docx.py  check_docx_test.py
report-validator/validator_docx/docx_files/: kontr.docx  kurspr.docx  kursrab.docx  lab.docx  lab_lot_err.docx  lab_title.docx  lab_wrong_struc.docx  ref.docx
