[metadata]
name = validateODTreport
description = slap that like button
author = TessierAshpoule256
license = GPL 3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    validateODTreport
install_requires =
    odfpy>=1.4.1
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    odfpy>=1.4.1
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
validateODTreport = py.typed

[flake8]
max-line-length = 53500